--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Cenaras API Stuff</title>
         <script src="jquery-3.3.1.min.js"></script>
         <script src="api.js"></script>
+        <script src = "jquery.md5.min.js"></script>
     </head>
     <body>
         <div class = "menubar">
