Updated index page and html for both pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="something.html">Something</a></li>
+                <li><a href="playerstats.html">RemoveMe</a></li>
             </ul>
         </div>
 
