Added name and clan appending

--- a/playerstats.html
+++ b/playerstats.html
@@ -23,8 +23,9 @@
             <div class = "containter">
                 <div class = "columns">
                     <div class = "playerbox">
-                        <div class = "playerboxName"></div>
-                        <div class = "dividers"></div>
+                        <div class = "playerBoxName"></div>
+                        <div class = "playerClanName"></div>
+                        <hr class = "divider">
                         <div class = "statrow"> </div>
                         <div class = "statrow"></div>
                     </div>
