Refactoring and moving of files

--- a/front-end/something.html
+++ b/front-end/something.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css">
         <title>Cenaras API Stuff</title>
-        <script src="jquery-3.1.1.min.js"></script>
+        <script src="F:\Coding\JavaScript\GitHub\SmiteAPI\SmiteAPI\scripts\jquery-3.1.1.min.js"></script>
     </head>
     <body>
         <ul>
