--- a/webpage/playerstats.html
+++ b/webpage/playerstats.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
         <title>Cenaras API Stuff</title>
-        <script src="..\scripts\jquery-3.3.1.min.js"></script>
-        <script src="..\scripts\api.js"></script>
-        <script src = "..\scripts\jquery.md5.min.js"></script>
+        <script src="scripts\jquery-3.3.1.min.js"></script>
+        <script src="scripts\api.js"></script>
+        <script src = "scripts\jquery.md5.min.js"></script>
     </head>
     <body>
         <div class = "menubar" style = "padding: 0em 0px 15%;">
